--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,6 +23,10 @@ linter:
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    always_declare_return_types: true
+    prefer_final_locals: true
+    prefer_const_constructors: true
+    unnecessary_late: true
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
