--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_map: ^8.2.1
+  latlong2: ^0.9.1
+  geolocator: ^14.0.2
+  mqtt_client: ^10.11.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
+  intl: ^0.20.2
+  qr_flutter: ^4.1.0
+  mobile_scanner: ^7.0.1
+  http: ^1.5.0
+  connectivity_plus: ^7.0.0
+  workmanager: ^0.9.0+3
+  shared_preferences: ^2.5.3
+  flutter_riverpod: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +73,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/i18n/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
