--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,26 +30,77 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Core UI & Navigation
   cupertino_icons: ^1.0.8
+  flutter_riverpod: ^3.0.0
+  go_router: ^14.2.7
+  
+  # Maps & Location
   flutter_map: ^8.2.1
   latlong2: ^0.9.1
   geolocator: ^14.0.2
+  location: ^5.0.3
+  
+  # Real-time Communication
   mqtt_client: ^10.11.1
+  socket_io_client: ^2.0.3+1
+  
+  # Data Storage
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  path_provider: ^2.1.5
-  intl: ^0.20.2
+  shared_preferences: ^2.5.3
+  sqflite: ^2.3.3+1
+  
+  # QR Code & Scanning
   qr_flutter: ^4.1.0
-  mobile_scanner: ^7.0.1
+  
+  # Network & HTTP
   http: ^1.5.0
   connectivity_plus: ^7.0.0
+  dio: ^5.7.0
+  
+  # Background Tasks
   workmanager: ^0.9.0+3
-  shared_preferences: ^2.5.3
-  flutter_riverpod: ^3.0.0
+  
+  # UI Components & Animations
+  lottie: ^3.1.2
+  flutter_animate: ^4.5.0
+  shimmer: ^3.0.0
+  glassmorphism: ^3.0.0
+  flutter_staggered_animations: ^1.1.1
+  animated_text_kit: ^4.2.2
+  flutter_svg: ^2.0.10+1
+  cached_network_image: ^3.4.1
+  
+  # Forms & Input
+  pin_code_fields: ^8.0.1
+  
+  # Payments
+  # razorpay_flutter: ^1.3.7
+  
+  # Charts & Analytics
+  fl_chart: ^0.69.0
+  
+  # Utilities
+  intl: ^0.20.2
+  path_provider: ^2.1.5
   url_launcher: ^6.3.2
+  permission_handler: ^11.3.1
+  device_info_plus: ^10.1.2
+  package_info_plus: ^8.0.0
+  
+  # Audio & Voice
+  # speech_to_text: ^6.6.0
+  # flutter_tts: ^4.0.2
+  
+  # State Management
+  # flutter_bloc: ^8.1.6
+  
+  # 3D & Graphics
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
